--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,32 @@ html {
 
 body {
 
-    padding: 0;
-    margin: 0;
+    background: #000000;
+    font-family: "Open Sans";
+}
+
+.boldWeight{
+    font-weight: 600;
+}
+.lightWeight{
+    font-weight: 300;
+}
+
+.bgColorCe{
+    background-color: #17A3B8;
+}
+.img-top{
+    height: 166px;
+}
+@media (max-width: 576px){
+    .img-top{
+      height: 200px;  
+    } 
+}
+hr{
+    border: 1;
+}
+
+p {
+    text-align: justify;
 }
